chore: Updated documentation and deleted obsolete passes